--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "Die Authentifizierung ist abgeschlossen, Sie können diesen Tab jetzt schließen.",
   "months": [
     "Januar",
     "Februar",
@@ -68,6 +69,9 @@
   "help": "Hilfe",
   "settings": "Einstellungen",
   "plugins": "Plugins",
+  "ctrlKey": "Strg",
+  "shiftKey": "Umschalt",
+  "altKey": "Alt",
   "cache": "Cache",
   "file": "Datei",
   "webdav": "WebDAV",
@@ -144,6 +148,10 @@
   "genPsAmbiguous": "Ähnliche Zeichen",
   "genPsInclude": "Zusätzliche Symbole angeben",
   "genPsExample": "Beispiel für ein generiertes Passwort",
+  "genPsPattern": "Muster",
+  "genPsPatternHelp": "Mit Mustern können eigene Regeln zur Auswahl von Zeichen festgelegt werden. Beispielsweise werden mit 1-AA Passwörter generiert, die mit einer Ziffer starten, gefolgt von einem Bindestrich und zwei Großbuchstaben. Die folgenden Symbole stehen zur Verfügung:",
+  "genPsAllRanges": "Alle Zeichen",
+  "genPsIncluded": "Zusätzliche oben hinzugefügte Zeichen",
   "keyChangeTitleRemote": "Hauptschlüssel geändert",
   "keyChangeMessageRemote": "Der Hauptschlüssel für diese Datenbank wurde geändert. Bitte geben Sie das neue Passwort ein.",
   "keyChangeTitleExpired": "Hauptschlüssel abgelaufen",
@@ -185,6 +193,7 @@
   "openNewFile": "Neu",
   "openMore": "Mehr",
   "openDemo": "Demo",
+  "openGenerate": "Generieren",
   "openXml": "XML importieren",
   "openCaps": "Feststelltaste ist aktiviert",
   "openClickToOpen": "Hier klicken, um eine Datei zu öffnen",
@@ -396,6 +405,8 @@
   "setGenShowSubgroups": "Einträge aus allen Untergruppen anzeigen",
   "setGenTableView": "Einträge in Tabellenansicht anzeigen",
   "setGenColorfulIcons": "Eigene Icons in der Listenansicht farbig anzeigen",
+  "setGenUseMarkdown": "Markdown in Notizen",
+  "setGenUseGroupIconForEntries": "Für neue Einträge automatisch das Gruppen-Icon verwenden",
   "setGenDirectAutotype": "Wenn nur ein passender Eintrag gefunden wird, diesen automatisch für Auto-Type auswählen",
   "setGenFunction": "Arbeitsweise",
   "setGenAutoSyncOnClose": "Beim Schließen speichern und synchronisieren",
@@ -456,6 +467,10 @@
   "setFileNames": "Namen",
   "setFileDefUser": "Standard-Benutzername",
   "setFileEnableTrash": "Papierkorb aktivieren",
+  "setFileHistMode": "Eintragsverlauf",
+  "setFileHistLimited": "Alte Einträge im Verlauf automatisch löschen",
+  "setFileHistDisabled": "Keinen Verlauf speichern",
+  "setFileHistUnlimited": "Verlauf dauerhaft speichern",
   "setFileHistLen": "Anzahl der im Verlauf gespeicherten Versionen",
   "setFileHistSize": "Maximalgröße des Verlaufs pro Datei in MB",
   "setFileBackups": "Sicherungen",
