--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "Se ha completado la autenticación, puedes cerrar esta pestaña.",
   "months": [
     "Enero",
     "Febrero",
@@ -68,8 +69,11 @@
   "help": "Ayuda",
   "settings": "Opciones",
   "plugins": "Complementos",
+  "ctrlKey": "ctrl",
+  "shiftKey": "mayús",
+  "altKey": "alt",
   "cache": "caché",
-  "file": "Glosario de términos",
+  "file": "Archivo",
   "webdav": "WebDAV",
   "dropbox": "Dropbox",
   "gdrive": "Google Drive",
@@ -144,6 +148,10 @@
   "genPsAmbiguous": "Caracteres ambiguos",
   "genPsInclude": "Caracteres adicionales a incluir",
   "genPsExample": "Ejemplo de contraseña generada",
+  "genPsPattern": "Patrón",
+  "genPsPatternHelp": "Los patrones pueden utilizarse para especificar reglas personalizadas para seleccionar caracteres. Por ejemplo, 1-AA generará contraseñas que comiencen por un dígito, seguido de un guión y dos letras. Puedes usar estos símbolos:",
+  "genPsAllRanges": "Todos los símbolos",
+  "genPsIncluded": "Símbolos adicionales agregados arriba",
   "keyChangeTitleRemote": "Contraseña maestra cambiada",
   "keyChangeMessageRemote": "La contraseña maestra ha cambiado para esta base de datos. Introduce la nueva contraseña",
   "keyChangeTitleExpired": "Contraseña maestra caducada",
@@ -170,7 +178,7 @@
   "searchZA": "Z {} A",
   "searchON": "Antiguo {} Nuevo",
   "searchNO": "Nuevo {} Antiguo",
-  "searchShiftClickOr": "Mayús. + clic o",
+  "searchShiftClickOr": "mayús-clic o",
   "searchAdvTitle": "Abrir la búsqueda avanzada",
   "searchSearchIn": "Buscar en",
   "searchOther": "Otros campos",
@@ -185,6 +193,7 @@
   "openNewFile": "Nuevo",
   "openMore": "Más",
   "openDemo": "Demo",
+  "openGenerate": "Generar",
   "openXml": "Importar XML",
   "openCaps": "Bloquear mayúsculas activo",
   "openClickToOpen": "Clic para abrir un archivo",
@@ -223,7 +232,7 @@
   "openListErrorBody": "Se ha producido un error al cargar la lista de archivos",
   "openShowAllFiles": "Mostrar todos los archivos",
   "openFileNoCacheError": "Fichero no encontrado en el almacenamiento caché. Esto puede suceder por haber limpiado el caché del navegador. Para abrir el fichero, elimínalo de KeeWeb y vuelve a añadirlo.",
-  "detAttDownload": "Presiona Mayús-clic sobre el botón para descargarlo o",
+  "detAttDownload": "Presiona mayús-clic sobre el botón para descargarlo o",
   "detAttDelToRemove": "Delete para eliminar",
   "detAttSave": "Guardar como ...",
   "detEmpty": "Tus contraseñas se mostarán aquí",
@@ -266,7 +275,7 @@
   "detDelToTrash": "¿Eliminar la entrada?",
   "detDelToTrashBody": "La entrada se moverá a la papelera.",
   "detFieldCopied": "Copiado",
-  "detFieldCopiedTime": "Copiado en {} segundos",
+  "detFieldCopiedTime": "Copiado por {} segundos",
   "detCopyHint": "Puedes copiar el valor del campo haciendo clic sobre su título",
   "detMore": "más",
   "detClickToAddField": "haz clic para añadir un nuevo campo",
@@ -396,6 +405,8 @@
   "setGenShowSubgroups": "Mostrar entradas de todos los subgrupos",
   "setGenTableView": "Mostrar lista de entradas como un panel horizontal",
   "setGenColorfulIcons": "Iconos propios con color en la lista",
+  "setGenUseMarkdown": "Markdown en notas",
+  "setGenUseGroupIconForEntries": "Usar automáticamente grupo de icono para nuevas entradas",
   "setGenDirectAutotype": "Si se encuentra una única entrada, escogerla automáticamente para auto-completado.",
   "setGenFunction": "Función",
   "setGenAutoSyncOnClose": "Guardar y sincronizar automáticamente al cerrar",
@@ -456,6 +467,10 @@
   "setFileNames": "Nombres",
   "setFileDefUser": "Usuario por defecto",
   "setFileEnableTrash": "Activar papelera",
+  "setFileHistMode": "Historial de entradas",
+  "setFileHistLimited": "Eliminar registros antiguos del historial automáticamente",
+  "setFileHistDisabled": "No guardar historial",
+  "setFileHistUnlimited": "Mantener siempre registros del historial",
   "setFileHistLen": "Longitud de historial, guarda los últimos registros por entrada",
   "setFileHistSize": "Tamaño de historial, MB totales por archivo",
   "setFileBackups": "Respaldos",
@@ -558,7 +573,7 @@
   "setAboutSecond": "y licenciada bajo {}.",
   "setAboutSource": "El código fuente e incidencias están en {}.",
   "setHelpFormat": "Formato de archivo",
-  "setHelpFormatBody": "Esto es una adaptación de la app {} creada con tecnologías web. Puede leer archivos en formato KeePass (kdbx). Puedes crear esos archivos (bases de datos de contraseñas) tanto en KeePass como en esta aplicación. El formato de archivos es 100% compatible y debería ser legible en ambas aplicaciones.",
+  "setHelpFormatBody": "Esto es una adaptación de la aplicación {} creada con tecnologías web. Puede leer archivos en formato KeePass (kdbx). Puedes crear esos archivos (bases de datos de contraseñas) tanto en KeePass como en esta aplicación. El formato de archivos es 100% compatible y debería ser legible en ambas aplicaciones.",
   "setHelpProblems": "¿Necesitas ayuda?",
   "setHelpProblems1": "Si algo va mal, por favor {}",
   "setHelpProblems2": "o {}",
