--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "Authentification terminée, vous pouvez fermer cet onglet.",
   "months": [
     "Janvier",
     "Février",
@@ -68,6 +69,9 @@
   "help": "Aide",
   "settings": "Paramètres",
   "plugins": "Modules",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
   "cache": "cache",
   "file": "fichier",
   "webdav": "WebDAV",
@@ -80,7 +84,7 @@
   "menuSetGeneral": "Général",
   "menuSetAbout": "À propos",
   "menuAlertNoTags": "Aucun tag",
-  "menuAlertNoTagsBody": "Vous pouvez ajouter de nouveaux tags en éditant les champs, dans la section tags.",
+  "menuAlertNoTagsBody": "Vous pouvez ajouter de nouveaux tags en éditant les champs, dans la section Tags.",
   "menuEmptyTrash": "Vider la Corbeille",
   "menuEmptyTrashAlert": "Vider la Corbeille?",
   "menuEmptyTrashAlertBody": "Vous ne pourrez plus récupérer ces éléments",
@@ -144,6 +148,10 @@
   "genPsAmbiguous": "Caractères ambigus",
   "genPsInclude": "Caractères additionnels à inclure",
   "genPsExample": "Exemple de mot de passe généré",
+  "genPsPattern": "Modèle",
+  "genPsPatternHelp": "Des modèles peuvent être utilisés pour spécifier des règles de sélection de caractères. 1-AA générera un mot de passe commençant par un chiffre, suivi d'un tiret et de 2 lettres. Vous pouvez utiliser ces symboles :",
+  "genPsAllRanges": "Tous les caractères",
+  "genPsIncluded": "Symboles additionnels ajoutés au-dessus",
   "keyChangeTitleRemote": "Clé maître changée",
   "keyChangeMessageRemote": "La clé maître a été changée pour cette base de donnée. Merci d'entrer une nouvelle clé",
   "keyChangeTitleExpired": "Clé maître expirée",
@@ -185,6 +193,7 @@
   "openNewFile": "Nouveau",
   "openMore": "Plus",
   "openDemo": "Démo",
+  "openGenerate": "Générer",
   "openXml": "Importer XML",
   "openCaps": "Majuscules activées",
   "openClickToOpen": "Cliquer pour ouvrir un fichier",
@@ -317,7 +326,7 @@
   "autoTypeLink": "plus...",
   "autoTypeError": "Erreur saisie auto",
   "autoTypeErrorGeneric": "Il y a eu une erreur lors de la saisie automatique : {}",
-  "autoTypeErrorGlobal": "Pour utiliser le raccourci, sélectionner dans l'application là où vous voulez saisir le mot de passe",
+  "autoTypeErrorGlobal": "Pour utiliser un raccourci, sélectionner l'application là où vous voulez saisir le mot de passe",
   "autoTypeErrorNotInstalled": "{} n'est pas installé",
   "autoTypeHeader": "Saisie auto : Selectionner",
   "autoTypeMsgNoWindow": "Nous n'avons pas pu obtenir le titre de la fenêtre active, commencez à taper pour rechercher",
@@ -396,6 +405,8 @@
   "setGenShowSubgroups": "Afficher les entrées de tous les sous groupes",
   "setGenTableView": "Voir les entrées en liste",
   "setGenColorfulIcons": "Icônes colorées dans la liste",
+  "setGenUseMarkdown": "Markdown dans les notes",
+  "setGenUseGroupIconForEntries": "Utilise automatiquement l'icône de groupe pour les nouvelles entrées",
   "setGenDirectAutotype": "Si une seule entrée correspondante est trouvée, sélectionner celle-ci automatiquement pour l'autotype.",
   "setGenFunction": "Opérations",
   "setGenAutoSyncOnClose": "Sauvegarde et synchro automatique à la fermeture",
@@ -436,7 +447,7 @@
   "setFileLocalHint": "Voulez-vous travailler avec des fichiers locaux ?",
   "setFileDownloadApp": "Télécharger l'application",
   "setFileSave": "Enregistrer",
-  "setFileSaveTo": "Enregistrer sous",
+  "setFileSaveTo": "Enregistrer sous...",
   "setFileClose": "Fermer",
   "setFileSync": "Sync",
   "setFileSyncVerb": "Synchroniser",
@@ -456,6 +467,10 @@
   "setFileNames": "Noms",
   "setFileDefUser": "Utilisateur par défaut",
   "setFileEnableTrash": "Activer corbeille",
+  "setFileHistMode": "Historique",
+  "setFileHistLimited": "Supprimer les anciens enregistrements automatiquement",
+  "setFileHistDisabled": "Ne pas sauvegarder l'historique",
+  "setFileHistUnlimited": "Garder les enregistrements de l'historique pour toujours",
   "setFileHistLen": "Longueur de l'historique, conserve les derniers enregistrements",
   "setFileHistSize": "Taille de l'historique, Mo par fichier",
   "setFileBackups": "Sauvegardes",
@@ -512,9 +527,9 @@
   "setShSave": "sauver tous les fichiers",
   "setShGen": "générer un mot de passe",
   "setShSet": "paramètres",
-  "setShCopyPassGlobal": "copier le mot de passe (quand l'appli est en arrière-plan)",
+  "setShCopyPassGlobal": "copier le mot de passe",
   "setShCopyOtp": "Copier l'OTP",
-  "setShAutoTypeGlobal": "saisie automatique (quand l'appli est en arrière-plan)",
+  "setShAutoTypeGlobal": "saisie automatique",
   "setShCopyPassOnly": "Copier mot de passe",
   "setShRestoreApp": "Ouvrir {}",
   "setShGlobal": "Ces raccourcis à l'échelle du système fonctionnent lorsque l'application s'exécute en arrière-plan. Vous pouvez cliquer dessus pour sélectionner votre propre raccourci.",
