--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -68,6 +68,9 @@
   "help": "Súgó",
   "settings": "Beállítások",
   "plugins": "Beépülők",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
   "cache": "gyorsítótár",
   "file": "fájl",
   "webdav": "WebDAV",
@@ -144,6 +147,10 @@
   "genPsAmbiguous": "Kétértelmű szimbólumok",
   "genPsInclude": "További felhasználandó szimbúlumok",
   "genPsExample": "Példa a generált jelszóra",
+  "genPsPattern": "Minta",
+  "genPsPatternHelp": "A minták a karakterek kiválasztásához szolgáló egyedi szabályok megadásához használhatók. Az 1-AA például olyan jelszót fog generálni, mely egy jelszóval kezdődik, és egy kötőjel majd két betű követ. Ezek a szimbólumok használhatók:",
+  "genPsAllRanges": "Minden szimbólum",
+  "genPsIncluded": "További szimbólumok a fentieken túl",
   "keyChangeTitleRemote": "Mesterkulcs megváltozott",
   "keyChangeMessageRemote": "Ennek az adatbázisnak mesterkulcsa megváltozott. Adjon meg egy új kulcsot",
   "keyChangeTitleExpired": "Mesterkulcs lejárt",
@@ -185,6 +192,7 @@
   "openNewFile": "Új",
   "openMore": "Továbbiak",
   "openDemo": "Demó",
+  "openGenerate": "Generálás",
   "openXml": "XML importálás",
   "openCaps": "Caps Lock be van kapcsolva",
   "openClickToOpen": "Kattintson fájl megnyitásához",
@@ -396,6 +404,8 @@
   "setGenShowSubgroups": "Minden alcsoport bejegyzéseinek megjelenítése",
   "setGenTableView": "Bejegyzések listája táblázatban",
   "setGenColorfulIcons": "Színes egyedi ikonok a listában",
+  "setGenUseMarkdown": "Markdown jelölőnyelv használata a feljegyzésekben",
+  "setGenUseGroupIconForEntries": "Csoportikonok alkalmazása új bejegyzésekhez",
   "setGenDirectAutotype": "Ha csak egyetlen egyező bejegyzés található, automatikusan válassza ki azt az egyet az automatikus gépeléshez.",
   "setGenFunction": "Működés",
   "setGenAutoSyncOnClose": "Automatikus mentés és szinkronizálás bezáráskor",
@@ -456,6 +466,10 @@
   "setFileNames": "Nevek",
   "setFileDefUser": "Alapértelmezett felhasználó",
   "setFileEnableTrash": "Lomtár engedélyezése",
+  "setFileHistMode": "Bejegyzés történet",
+  "setFileHistLimited": "Régi bejegyzések automatikus törlése",
+  "setFileHistDisabled": "Ne mentsen bejegyzés történetet",
+  "setFileHistUnlimited": "Örökké tartsa meg a bejegyzés történetet",
   "setFileHistLen": "Előzmények hossza, utolsó rekordok megtartása bejegyzésenként",
   "setFileHistSize": "Előzmények mérete, MB fájlonként",
   "setFileBackups": "Biztonsági mentések",
