--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -85,6 +85,8 @@
   "menuEmptyTrashAlert": "Svuotare il cestino?",
   "menuEmptyTrashAlertBody": "Non sarà possibile recuperare gli elementi",
   "menuItemCollapsed": "Fai doppio-click per espandere",
+  "menuRestoreApp": "Apri {}",
+  "menuQuitApp": "Chiudi {}",
   "alertYes": "Sì",
   "alertNo": "No",
   "alertOk": "OK",
@@ -109,6 +111,8 @@
   "genPresetMac": "Indirizzo MAC",
   "genPresetHash128": "hash a 128-bit",
   "genPresetHash256": "hash a 256-bit",
+  "genHidePass": "Nascondi password",
+  "genShowPass": "Mostra password",
   "grpTitle": "Gruppo",
   "grpSearch": "Abilita la ricerca delle voci in questo gruppo",
   "grpAutoType": "Abilita scrittura automatica",
@@ -145,6 +149,7 @@
   "keyChangeTitleExpired": "Chiave Principale Scaduta",
   "keyChangeMessageExpired": "La chiave principale per questo database è scaduta. Per favore inserire una nuova chiave",
   "keyChangeRepeatPassword": "Password, di nuovo",
+  "keyEnter": "Invia",
   "iconFavTitle": "Scarica ed usa la favicon dal sito",
   "iconSelCustom": "Seleziona un'icona personalizzata",
   "listEmptyTitle": "Vuoto",
@@ -173,10 +178,13 @@
   "searchOptions": "Opzioni",
   "searchCase": "Maiuscole/minuscole",
   "searchRegex": "Espressione regolare",
+  "searchExact": "Esattamente",
   "openOpen": "Apri",
   "openNew": "Nuovo",
+  "openNewFile": "Nuovo",
   "openMore": "Di più",
   "openDemo": "Demo",
+  "openGenerate": "Genera",
   "openXml": "Importa xml",
   "openCaps": "Block maiusc attivato",
   "openClickToOpen": "file",
@@ -214,8 +222,10 @@
   "openErrorFileNotFound": "File non trovato",
   "openListErrorBody": "Errore durante il caricamento della lista dei file",
   "openShowAllFiles": "Mostra tutti i file",
+  "openFileNoCacheError": "File non trovato nella cache. Questo può accadere se la cache del Browser viene cancellata. Per aprire il file, rimuovilo da KeeWeb a aggiungilo nuovamente.",
   "detAttDownload": "Premi Shift+Click sull'allegato per scaricarlo oppure",
   "detAttDelToRemove": "del per cancellare",
+  "detAttSave": "Salva come ...",
   "detEmpty": "La tua password verrà visualizzata qui",
   "detGroupRestore": "Per ripristinare questo gruppo, trascinarlo in qualsiasi gruppo al di fuori del cestino",
   "detHistoryClickPoint": "Voce",
@@ -231,6 +241,12 @@
   "detHistoryNoTitle": "nessun titolo",
   "detHistoryCurState": "stato corrente",
   "detHistoryCurUnsavedState": "stato correntemente non salvato",
+  "detHistoryRevertAlert": "Ripristinare a questa versione ?",
+  "detHistoryRevertAlertBody": "Lo stato corrente verrà salvato nella storia.",
+  "detHistoryDeleteAlert": "Rimuovere questo stato ?",
+  "detHistoryDeleteAlertBody": "Non sarai più in grado di ripristinarlo.",
+  "detHistoryDiscardChangesAlert": "Ignorare le modifiche apportate?",
+  "detHistoryDiscardChangesAlertBody": "Le modifiche non salvate andranno perse, non sarà possibile tornare indietro.",
   "detBackToList": "indietro all'elenco",
   "detSetIconColor": "Cambia colore",
   "detSetIcon": "Cambia icona",
@@ -247,6 +263,8 @@
   "detDelFromTrash": "Cancellare dal cestino?",
   "detDelFromTrashBody": "Non potrai più tornare indietro",
   "detDelFromTrashBodyHint": "Per rimuovere velocemente tutti gli elementi dal cestino, clicca l'icona svuota nel menu del cestino",
+  "detDelToTrash": "Eliminare ?",
+  "detDelToTrashBody": "La voce verrà spostata nella cartella cestino.",
   "detFieldCopied": "Copiato",
   "detFieldCopiedTime": "Copiato per {} secondi",
   "detCopyHint": "Puoi copiare un campo cliccando il suo nome",
@@ -260,6 +278,7 @@
   "detMenuCopyUser": "Copia utente",
   "detSetupOtp": "Password temporanea",
   "detClone": "Duplica",
+  "detCopyEntryToClipboard": "Copia tutti i campi",
   "detClonedName": "Copia",
   "detAutoType": "Scrittura automatica",
   "detAutoTypeSettings": "Impostationi scrittura automatica",
@@ -287,6 +306,10 @@
   "detOtpQrErrorBody": "Spiacenti, non è possibile leggere il QR code, riprovare nuovamente o contattare gli autori dell'applicazione con il dettaglio dell'errore.",
   "detOtpQrWrong": "Codice QR errato",
   "detOtpQrWrongBody": "Il codice QR è stato letto correttamente ma non contiene dati di una password temporanea.",
+  "detLockField": "Blocca questo campo: il suo contenuto non sarà ricercabile e visibile. La visualizzazione del contenuto richiede un clic esplicito.",
+  "detUnlockField": "Sblocca questo campo, rendendolo immediatamente ricercabile e visibile",
+  "detRevealField": "Mostra",
+  "detHideField": "Nascondi",
   "autoTypeEntryFields": "Campi della voce",
   "autoTypeModifiers": "Modificatori",
   "autoTypeKeys": "Tasti",
@@ -299,6 +322,7 @@
   "autoTypeMsgNoWindow": "Non è stato possibile reperire il titolo della finestra attiva, inizia a digitare per cercare",
   "autoTypeMsgMatchedByWindow": "Seleziona una password per {}",
   "autoTypeNoMatches": "nessuna corrispondenza",
+  "autoTypeSelectionHintShift": "Altri campi",
   "appSecWarn": "Non sicuro!",
   "appSecWarnBody1": "Hai caricato questa applicazione con una connessione insicura. Qualcuno potrebbe spiarti e rubare le tue password. Consigliamo caldamente chiudere l'applicazione se non si comprende chiaramente cosa sta succedendo.",
   "appSecWarnBody2": "Si, il database è criptato ma nessuno può garantire che l'applicazione non sia stata modificata.",
@@ -353,6 +377,7 @@
   "setGenThemeHc": "Alto contrasto",
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
+  "setGenThemeMacDark": "macOS Dark",
   "setGenLocale": "Lingua",
   "setGenLocOther": "altre lingue sono disponibili con i plugin",
   "setGenFontSize": "Dimensione carattere",
@@ -367,6 +392,10 @@
   "setGenTableView": "Mostra le voci come una tabella",
   "setGenColorfulIcons": "Icone personalizzate colorate",
   "setGenFunction": "Funzionalità",
+  "setGenAutoSyncOnClose": "Salva e sincronizza automaticamente alla chiusura",
+  "setGenAutoSyncTimer": "Salva e sincronizza automaticamente periodicamente",
+  "setGenAutoSyncTimerOff": "Disabilitato",
+  "setGenAutoSyncTimerInterval": "Ogni {} minute(s)",
   "setGenRememberKeyFiles": "Ricorda i file chiave",
   "setGenNoRememberKeyFiles": "Non ricordare",
   "setGenRememberKeyFilesData": "Salva nell'archivio interno dell'app",
@@ -394,6 +423,7 @@
   "setGenTryBetaWarning": "File non salvati",
   "setGenTryBetaWarningBody": "Per favore, salva tutti i file e clicca nuovamente questo bottone",
   "setGenShowAppLogs": "Mostra log app",
+  "setGenReloadApp": "Ricarica l'app",
   "setFilePath": "Percorso file",
   "setFileStorage": "Questo file è stato caricato da {}.",
   "setFileIntl": "Questo file è salvato nella memoria interna dell'applicazione",
@@ -403,13 +433,17 @@
   "setFileSaveTo": "Salva in...",
   "setFileClose": "Chiudi",
   "setFileSync": "Sincronizza",
+  "setFileSyncVerb": "Sincronizza",
   "setFileSaveToXml": "XML",
+  "setFileSaveToHtml": "HTML",
   "setFileLastSync": "Ultima sincronizzazione",
   "setFileLastSyncUnknown": "sconosciuto",
   "setFileSyncInProgress": "Sincronizzazione in corso",
   "setFileSyncError": "Errore sincronizzazione",
   "setFilePass": "Password principale",
+  "setFileConfirmPass": "Conferma password principale",
   "setFilePassChanged": "La password è stata cambiata; lascia il campo vuoto per usare la vecchia password",
+  "setFilePassNotMatch": "le password non coincidono, si prega di digitare di nuovo",
   "setFileKeyFile": "File chiave",
   "setFileSelKeyFile": "Selezione un file chiave",
   "setFileNames": "Nomi",
@@ -425,6 +459,8 @@
   "setFileBackupNowWorking": "In corso...",
   "setFileBackupError": "Errore backup",
   "setFileBackupErrorDescription": "Errore scrittura file backup",
+  "setFileBackupErrorIsDir": "Percorso di backup non valido",
+  "setFileBackupErrorIsDirDescription": "Il percorso di backup sembra puntare a una directory. Si prega di specificare un nome per il file all'interno di una directory.",
   "setFileBackupOnSave": "Ogni volta che salvo il file",
   "setFileBackupDaily": "Giornaliero",
   "setFileBackupWeekly": "Settimanale",
@@ -451,6 +487,7 @@
   "setFileUnsavedBody": "Ci sono modifiche non salvate in questo file",
   "setFileCloseNoSave": "Chiudi e perdi modifiche",
   "setFileDontClose": "Non chiudere",
+  "setFileFormatVersion": "Formato file",
   "setShTitle": "Scorciatoie",
   "setShShowAll": "Visualizza tutti",
   "setShColors": "Visualizza tutti con colori",
@@ -469,8 +506,12 @@
   "setShGen": "Genera password",
   "setShSet": "Impostazioni",
   "setShCopyPassGlobal": "Copia password (quando l'applicazione è in background)",
+  "setShCopyOtp": "Copia OTP",
   "setShAutoTypeGlobal": "Digita automaticamente (quando l'applicazione è in background)",
+  "setShCopyPassOnly": "Copia password",
+  "setShRestoreApp": "apri {}",
   "setShLock": "Blocca il database",
+  "setShEdit": "Premere una nuova combinazione di tasti per impostarla come scorciatoia",
   "setPlInstallTitle": "Installa nuovi plugin",
   "setPlInstallDesc": "I plugin di KeeWeb aggiungono funzionalità, temi e lingue a KeeWeb. I plugin vengono eseguiti con gli stessi privilegi di KeeWeb, possono accedere a e gestile le tue password. Non installare mai un plugin di cui non ti fidi.",
   "setPlInstallLabel": "URL del plugin",
@@ -532,11 +573,21 @@
   "dropboxLinkApp": "Cartella app (Apps/KeeWeb)",
   "dropboxLinkFull": "Intero Dropbox o qualsiasi cartella",
   "dropboxLinkCustom": "Propria app Dropbox",
+  "gdriveSharedWithMe": "Condiviso con me",
   "webdavSaveMethod": "Metodo di salvataggio",
   "webdavSaveMove": "Carica un file temporaneo e spostalo",
   "webdavSavePut": "Sovrascrivi il file kdbx con PUT",
   "launcherSave": "Salva il database delle password",
   "launcherFileFilter": "File KeePass",
   "authPopupRequired": "I pop-up sono bloccati",
-  "authPopupRequiredBody": "Per favore, permetti i pop-up per questa applicazione nel tuo browser."
+  "authPopupRequiredBody": "Per favore, permetti i pop-up per questa applicazione nel tuo browser.",
+  "exportFileInfo": "Informazioni file",
+  "exportHtmlName": "Nome",
+  "exportGenerator": "Software",
+  "exportDescription": "Questo file è generato con {}.",
+  "importCsvTitle": "Importa da CSV",
+  "importCsvRun": "Importa",
+  "importIgnoreField": "Ignora",
+  "importTo": "Le voci verranno importate in",
+  "importNewFile": "Nuovo file"
 }
