--- a/docs/translations/nl-NL/nl-NL.json
+++ b/docs/translations/nl-NL/nl-NL.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "Verificatie is voltooid, u kunt dit tabblad nu sluiten.",
   "months": [
     "januari",
     "februari",
@@ -68,6 +69,9 @@
   "help": "Help",
   "settings": "Instellingen",
   "plugins": "Plug-ins",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
   "cache": "cache",
   "file": "bestand",
   "webdav": "WebDAV",
@@ -144,6 +148,10 @@
   "genPsAmbiguous": "Dubbelzinnige symbolen",
   "genPsInclude": "Extra symbolen toevoegen",
   "genPsExample": "Voorbeeld van gegenereerd wachtwoord",
+  "genPsPattern": "Patroon",
+  "genPsPatternHelp": "Patronen kunnen worden gebruikt om aangepaste regels op te geven voor het selecteren van tekens. Zo genereert 1-AA wachtwoorden die beginnen met een cijfer, gevolgd door een streepje en twee letters. Je kunt deze symbolen gebruiken:",
+  "genPsAllRanges": "Alle symbolen",
+  "genPsIncluded": "Extra symbolen hierboven toegevoegd",
   "keyChangeTitleRemote": "Hoofdsleutel gewijzigd",
   "keyChangeMessageRemote": "De hoofdsleutel was gewijzigd voor deze database. Voer een nieuwe sleutel in.",
   "keyChangeTitleExpired": "Hoofdsleutel verlopen",
@@ -398,6 +406,7 @@
   "setGenTableView": "Items in tabelweergave",
   "setGenColorfulIcons": "Kleurrijke eigen iconen in de lijst",
   "setGenUseMarkdown": "Markdown-opmaak in notities",
+  "setGenUseGroupIconForEntries": "Bij nieuwe items automatisch het groepspictogram toepassen",
   "setGenDirectAutotype": "Als er slechts één overeenkomstig item wordt gevonden, gebruik dat dan om automatisch in te vullen",
   "setGenFunction": "Functie",
   "setGenAutoSyncOnClose": "Bij afsluiten automatisch opslaan en synchroniseren",
@@ -458,6 +467,10 @@
   "setFileNames": "Namen",
   "setFileDefUser": "Standaardgebruiker",
   "setFileEnableTrash": "Prullenbak gebruiken",
+  "setFileHistMode": "Geschiedenis",
+  "setFileHistLimited": "Oude geschiedenisgegevens automatisch wissen",
+  "setFileHistDisabled": "Geschiedenis niet opslaan",
+  "setFileHistUnlimited": "Geschiedenis voor altijd bewaren",
   "setFileHistLen": "Lengte van historie, bewaar laatste versies per invoer",
   "setFileHistSize": "Grootte van historie, totaal MB per bestand",
   "setFileBackups": "Reservekopie",
