--- a/docs/translations/pt-BR/pt-BR.json
+++ b/docs/translations/pt-BR/pt-BR.json
@@ -144,6 +144,9 @@
   "genPsAmbiguous": "Símbolos ambíguos",
   "genPsInclude": "Símbolos adicionais para incluir",
   "genPsExample": "Exemplo de senha gerada",
+  "genPsPatternHelp": "Padrões podem ser utilizados para especificar regras customizadas para selecionar caracteres. Por exemplo, 1-AA irá gerar senhas começando com um digito, seguido por um hífen e duas letras. Você pode usar estes símbolos:",
+  "genPsAllRanges": "Todos os simbolos",
+  "genPsIncluded": "Símbolos adicionais acima",
   "keyChangeTitleRemote": "Chave mestra alterada",
   "keyChangeMessageRemote": "A chave mestra foi alterada para este banco de dados. Por favor, insira uma nova chave",
   "keyChangeTitleExpired": "Chave mestra expirada",
@@ -178,12 +181,14 @@
   "searchOptions": "Opções",
   "searchCase": "Compatibilizar maiúsculas/minúsculas",
   "searchRegex": "RegEx",
+  "searchRank": "auto",
   "searchExact": "Exata",
   "openOpen": "Abrir",
   "openNew": "Novo",
   "openNewFile": "Novo",
   "openMore": "Mais",
   "openDemo": "Demonstração",
+  "openGenerate": "Gerar",
   "openXml": "Importar XML",
   "openCaps": "Maiúsculas estão ativadas",
   "openClickToOpen": "Clique para abrir um arquivo",
