--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "Авторизация завершена, вы можете закрыть вкладку.",
   "months": [
     "Января",
     "Февраля",
@@ -68,6 +69,9 @@
   "help": "Помощь",
   "settings": "Настройки",
   "plugins": "Плагины",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
   "cache": "кэш",
   "file": "Файл",
   "webdav": "WebDAV",
@@ -144,6 +148,10 @@
   "genPsAmbiguous": "Неоднозначные символы",
   "genPsInclude": "Дополнительные символы",
   "genPsExample": "Пример сгенерированного пароля",
+  "genPsPattern": "Шаблон",
+  "genPsPatternHelp": "Шаблоны могут быть использованы для указания пользовательских правил выбора символов. Например, 1-AA будет генерировать пароли, начиная с цифры, за которой следует тире и две буквы. Вы можете использовать эти символы:",
+  "genPsAllRanges": "Все символы",
+  "genPsIncluded": "Дополнительные символы добавлены выше",
   "keyChangeTitleRemote": "Мастер-ключ изменен",
   "keyChangeMessageRemote": "Мастер-ключ был изменен для этой базы данных. Пожалуйста, введите новый ключ.",
   "keyChangeTitleExpired": "Мастер-ключ истек",
@@ -398,6 +406,7 @@
   "setGenTableView": "Табличное представление списка записей",
   "setGenColorfulIcons": "Красочные иконки в списке",
   "setGenUseMarkdown": "Markdown в заметках",
+  "setGenUseGroupIconForEntries": "Автоматически использовать иконку группы для новых записей.",
   "setGenDirectAutotype": "Если найдена только одна подходящая запись, выбирать ее для автозаполнения автоматически",
   "setGenFunction": "Поведение",
   "setGenAutoSyncOnClose": "Автоматически сохранять и синхронизировать при закрытии",
@@ -458,6 +467,10 @@
   "setFileNames": "Название",
   "setFileDefUser": "Пользователь по умолчанию",
   "setFileEnableTrash": "Включить корзину",
+  "setFileHistMode": "История записи.",
+  "setFileHistLimited": "Удалить старые записи автоматически.",
+  "setFileHistDisabled": "Не сохранять историю",
+  "setFileHistUnlimited": "Хранить историю всегда",
   "setFileHistLen": "Длина истории, число изменений для каждой записи",
   "setFileHistSize": "Размер журнала, общий объем на файл (МБ)",
   "setFileBackups": "Резервирование",
