--- a/docs/translations/sk/sk.json
+++ b/docs/translations/sk/sk.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "Overenie kompletné, môžete zavrieť tento tab.",
   "months": [
     "Január",
     "Február",
@@ -68,6 +69,9 @@
   "help": "Nápoveda",
   "settings": "Nastavenia",
   "plugins": "Rozšírenia",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
   "cache": "cache",
   "file": "súbor",
   "webdav": "WebDAV",
@@ -144,6 +148,10 @@
   "genPsAmbiguous": "Zameniteľené znaky",
   "genPsInclude": "Dodatočné znaky",
   "genPsExample": "Príklad generovaného hesla",
+  "genPsPattern": "Vzor",
+  "genPsPatternHelp": "Vzor môže byť použitý pre špecifikáciu vlastných pravidiel pre výber znakov. Napríklad, 1-AA vygeneruje heslo začínajúce číslom, nasledované pomlčkou a dvoma písmenami. Môžete použiť tieto symboly:",
+  "genPsAllRanges": "Všetky symboly",
+  "genPsIncluded": "Dodatočné symboly pridané vyššie",
   "keyChangeTitleRemote": "Hlavný kľúč bolo zmenený",
   "keyChangeMessageRemote": "Hlavný kľúč databázy bol zmenený. Prosím vložte nový kľúč.",
   "keyChangeTitleExpired": "Hlavný kľúč exspiroval",
@@ -398,6 +406,7 @@
   "setGenTableView": "Tabuľkové zobrazenie záznamov",
   "setGenColorfulIcons": "Farebné vlastné ikony",
   "setGenUseMarkdown": "Markdown v poznámkach",
+  "setGenUseGroupIconForEntries": "Automaticky použiť ikonku skupiny pre nové záznamy",
   "setGenDirectAutotype": "Ak je nájdený len jeden zhodný záznam, vyber ho automaticky pre Autotype",
   "setGenFunction": "Funkcia",
   "setGenAutoSyncOnClose": "Automaticky ulož a synchronizuj pri zatvorení",
@@ -458,6 +467,10 @@
   "setFileNames": "Mená",
   "setFileDefUser": "Predvolený používateľ",
   "setFileEnableTrash": "Povoliť kôš",
+  "setFileHistMode": "História záznamov",
+  "setFileHistLimited": "Zmazať historické záznamy automaticky",
+  "setFileHistDisabled": "Neukladať históriu",
+  "setFileHistUnlimited": "Uchovať históriu záznamov",
   "setFileHistLen": "Dĺžka histórie, uchovať posledný záznam pre údaj",
   "setFileHistSize": "Veľkosť histórie, celkovo MB pre súbor",
   "setFileBackups": "Zálohy",
