--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "Kimlik doğrulama tamamlandı, bu sekmeyi şimdi kapatabilirsiniz.",
   "months": [
     "Ocak",
     "Şubat",
@@ -68,6 +69,9 @@
   "help": "Yardım",
   "settings": "Ayarlar",
   "plugins": "Eklentiler",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
   "cache": "Önbellek",
   "file": "Dosya",
   "webdav": "WebDAV",
@@ -144,6 +148,10 @@
   "genPsAmbiguous": "Belirsiz semboller",
   "genPsInclude": "Ek olarak eklenecek semboller",
   "genPsExample": "Oluşturulmuş örnek parola",
+  "genPsPattern": "Desen",
+  "genPsPatternHelp": "Desenler, karakterleri seçmek için özel kurallar belirtmek için kullanılabilir. Örneğin, 1-AA bir rakam ve ardından bir tire ve iki harf ile başlayan parolalar oluşturur. Bu sembolleri kullanabilirsiniz:",
+  "genPsAllRanges": "Tüm semboller",
+  "genPsIncluded": "Yukarıdakilere ek semboller",
   "keyChangeTitleRemote": "Ana Anahtar Değiştirildi",
   "keyChangeMessageRemote": "Bu veritabanının ana anahtarı değişti. Lütfen yeni bir anahtar girin",
   "keyChangeTitleExpired": "Ana anahtarın süresi doldu",
@@ -398,6 +406,7 @@
   "setGenTableView": "Girdileri tablo görünümünde listele",
   "setGenColorfulIcons": "Listedeki özel renkli simgeler",
   "setGenUseMarkdown": "Notları işaretle",
+  "setGenUseGroupIconForEntries": "Yeni girdiler için otomatik olarak grup simgesini kullan",
   "setGenDirectAutotype": "Yalnızca bir eşleşen giriş bulunursa otomatik yazım için bunu seç",
   "setGenFunction": "İşlev",
   "setGenAutoSyncOnClose": "Otomatik kaydetmeyi ve eşitlemeyi kapat",
@@ -458,6 +467,10 @@
   "setFileNames": "İsimler",
   "setFileDefUser": "Öntanımlı kullanıcı",
   "setFileEnableTrash": "Çöp kutusunu etkinleştir",
+  "setFileHistMode": "Girdi geçmişi",
+  "setFileHistLimited": "Eski geçmiş kayıtlarını otomatik olarak sil",
+  "setFileHistDisabled": "Geçmişi asla kaydetme",
+  "setFileHistUnlimited": "Geçmiş kayıtlarını sonsuza kadar sakla",
   "setFileHistLen": "Geçmiş uzunluğu, giriş başına son kayıtları sakla",
   "setFileHistSize": "Geçmiş boyutu, dosya başına toplam MB",
   "setFileBackups": "Yedekler",
