--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "Авторизацію завершено. Ви можете закрити цю вкладку.",
   "months": [
     "Січень ",
     "Лютий ",
@@ -18,23 +19,23 @@
     "Лют",
     "Бер",
     "Кві",
-    "Трав",
-    "Черв",
+    "Тра",
+    "Чер",
     "Лип",
-    "Серп",
-    "Верес",
-    "Жовт",
-    "Лист",
-    "Груд"
+    "Сер",
+    "Вер",
+    "Жов",
+    "Лис",
+    "Гру"
   ],
   "weekdays": [
-    "Неділя ",
-    "Понеділок ",
-    "Вівторок ",
+    "Неділя",
+    "Понеділок",
+    "Вівторок",
     "Середа",
     "Четвер",
-    "П'ятниця ",
-    "Субота "
+    "П'ятниця",
+    "Субота"
   ],
   "weekdaysShort": [
     "Нд",
@@ -45,17 +46,17 @@
     "Пт",
     "Сб"
   ],
-  "retToApp": "вернутись до програми ",
-  "name": "ім'я ",
-  "icon": "піктограма ",
-  "title": "назва ",
-  "password": "пароль ",
-  "user": "логін",
-  "website": "сайт ",
-  "tags": "теги",
-  "notes": "нотатки ",
-  "entry": "запис",
-  "group": "група ",
+  "retToApp": "Повернутись до програми",
+  "name": "Назва",
+  "icon": "Піктограма",
+  "title": "Назва",
+  "password": "Пароль",
+  "user": "Користувач",
+  "website": "Вебсайт",
+  "tags": "Мітки",
+  "notes": "Нотатки",
+  "entry": "Запис",
+  "group": "Група",
   "noTitle": "немає назви ",
   "or": "чи",
   "history": "історія ",
@@ -68,6 +69,9 @@
   "help": "Допомога ",
   "settings": "Налаштування ",
   "plugins": "Плагіни",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
   "cache": "кеш",
   "file": "файл",
   "webdav": "WebDAV",
@@ -86,6 +90,7 @@
   "menuEmptyTrashAlertBody": "Ви не зможете повернути елементи",
   "menuItemCollapsed": "Двічі натисніть, щоб розгорнути",
   "menuRestoreApp": "Відкрити {}",
+  "menuQuitApp": "Вийти з {}",
   "alertYes": "Так",
   "alertNo": "Ні",
   "alertOk": "ОК",
@@ -126,7 +131,7 @@
   "tagExists": "Тег вже існує",
   "tagExistsBody": "Тег з такою назвою вже існує. Будь ласка, оберіть іншу назву.",
   "tagBadName": "Погана назва",
-  "tagBadNameBody": "Тег не може містити наступні символи: {}. Будь ласка, видаліть їх.",
+  "tagBadNameBody": "Назва мітки не може містити символи: {}. Будь ласка, приберіть їх.",
   "genPsTitle": "Генератор шаблонів",
   "genPsCreate": "Новий шаблон",
   "genPsDelete": "Видалити шаблон",
@@ -143,6 +148,10 @@
   "genPsAmbiguous": "Неоднозначні символи",
   "genPsInclude": "Додаткові символи",
   "genPsExample": "Приклад згенерованого пароля",
+  "genPsPattern": "Шаблон",
+  "genPsPatternHelp": "Шаблони можна використовувати для встановлення власних правил підбору символів. Наприклад, 1-AA генеруватиме паролі, що починаються цифрою, після якої буде дефіс і дві літери. Ви можете використовувати такі символи:",
+  "genPsAllRanges": "Усі символи",
+  "genPsIncluded": "Інші символи додано вище",
   "keyChangeTitleRemote": "Майстер-ключ змінено",
   "keyChangeMessageRemote": "Майстер-ключ було змінено для цієї бази даних. Будь ласка, введіть новий ключ.",
   "keyChangeTitleExpired": "Термін дії майстер-ключа минув",
@@ -150,7 +159,7 @@
   "keyChangeRepeatPassword": "Пароль ще раз",
   "keyEnter": "Вхід",
   "iconFavTitle": "Завантажити і використовувати іконку сайту",
-  "iconSelCustom": "Обрати свою іконку",
+  "iconSelCustom": "Обрати власну піктограму",
   "listEmptyTitle": "Пусто",
   "listEmptyAdd": "додайте за допомогою кнопки {} вище",
   "listGroup": "Група",
@@ -178,6 +187,7 @@
   "searchCase": "З урахуванням регістру",
   "searchRegex": "RegEx",
   "searchRank": "Автоматично",
+  "searchExact": "Точний збіг",
   "openOpen": "Відкрити",
   "openNew": "Створити",
   "openNewFile": "Новий",
@@ -194,13 +204,13 @@
   "openNothingFound": "Нічого не знайдено",
   "openNothingFoundBody": "Немає файлів, які могли б бути відкриті.",
   "openSelectFile": "Оберіть файл",
-  "openSelectFileBody": "Оберіть файл, який ви хотіли б відкрити",
+  "openSelectFileBody": "Оберіть файл, який ви бажаєте відкрити",
   "openPassFor": "Пароль для",
   "openRemoveLastQuestion": "Видалити локальний файл?",
   "openRemoveLastQuestionBody": "Файл, який ви видаляєте зберігається тільки всередині програми. Видалити його назавжди?",
   "openRemoveLastQuestionModBody": "Файл має локальні зміни. Видалити його без збереження змін?",
   "openLocalFile": "Локальний файл",
-  "openLocalFileBody": "Ви збираєтеся відкрити файл, який буде зберігатися всередині програми. Зміни, які були внесені не будуть збрегітись назад у файлову систему. Щоб отримати файл з вашими даними, експортуйте його з налаштувань.",
+  "openLocalFileBody": "Ви збираєтеся відкрити файл, який зберігатиметься всередині програми. Зроблені зміни не зберігатимуться у файлову систему. Щоб отримати файл з вашими даними, експортуйте його з налаштувань.",
   "openLocalFileDontShow": "Не показувати знову",
   "openWrongFile": "Поганий файл",
   "openWrongFileBody": "Даний формат файлу не підтримується. Програма працює з файлами бази даних KeePass (kdbx).",
@@ -222,7 +232,7 @@
   "openListErrorBody": "Помилка завантаження списку файлів",
   "openShowAllFiles": "Показати всі файли",
   "openFileNoCacheError": "Файл не знайдено в кеші. Це може трапитися, якщо сховище браузера було очищено. Щоб відкрити файл, видаліть його з KeeWeb і додайте заново.",
-  "detAttDownload": "Натисніть Shift і клацніть по вкладенню щоб завантажити або",
+  "detAttDownload": "Натисніть Shift і клацніть по вкладенню, щоб завантажити його, або",
   "detAttDelToRemove": "Delete для видалення",
   "detAttSave": "Зберегти як ...",
   "detEmpty": "Ваші паролі будуть відображатися тут",
@@ -261,7 +271,7 @@
   "detAttachments": "Вкладення",
   "detDelFromTrash": "Видалити з кошика?",
   "detDelFromTrashBody": "Ви не зможете скасувати цю операцію.",
-  "detDelFromTrashBodyHint": "Щоб швидко видалити весь вміст кошика, натисніть піктограму очищення в меню кошика.",
+  "detDelFromTrashBodyHint": "Щоб швидко видалити весь вміст смітника, натисніть піктограму очищення в меню смітника.",
   "detDelToTrash": "Видалити запис?",
   "detDelToTrashBody": "Запис буде перенесено у кошик.",
   "detFieldCopied": "скопійовано",
@@ -316,7 +326,7 @@
   "autoTypeLink": "ще",
   "autoTypeError": "помилка автоматичного введення",
   "autoTypeErrorGeneric": "Помилка виконання автоматичного введення: {}",
-  "autoTypeErrorGlobal": "Для використання глобальних гарячих клавіш, зробіть активним вікно додатка, в якому хочете ввести пароль",
+  "autoTypeErrorGlobal": "Для використання комбінацій клавіш на рівні системи, зробіть активним вікно програми, в якому ви хочете ввести пароль",
   "autoTypeErrorNotInstalled": "{} не встановлений",
   "autoTypeHeader": "Автовведення: Оберіть",
   "autoTypeMsgNoWindow": "Нам не вдалося отримати активний заголовок вікна, почніть вводити для пошуку",
@@ -328,21 +338,21 @@
   "autoTypeSelectionHintShift": "Інші поля",
   "autoTypeSelectionOtp": "Одноразовий пароль",
   "appSecWarn": "Не безпечно!",
-  "appSecWarnBody1": "Ви завантажили цю программу через незахищене з'єднання. Хтось може спостерігати за вами і вкрасти ваші паролі. Ми наполегливо рекомендуємо вам зупинитися. Ви можете продовжити тільки, якщо ви чітко розумієте, що ви робите.",
+  "appSecWarnBody1": "Ви завантажили цю програму через незахищене з'єднання. Хтось може спостерігати за вами і викрасти ваші паролі. Ми наполегливо рекомендуємо вам зупинитися, якщо тільки ви не впевнені в своїх діях.",
   "appSecWarnBody2": "Так, ваша база даних в зашифрованому вигляді, але ніхто не може гарантувати, що програма не була змінена на шляху до вас.",
   "appSecWarnBtn": "Я розумію, що ризик, як і раніше",
   "appUnsavedWarn": "Незбережені зміни!",
   "appUnsavedWarnBody": "У вас є незбережені файли, якщо ви закриєте програму, зміни будуть втрачені.",
   "appDontExitBtn": "Не виходьте",
-  "appCannotLockAutoInit": "Програму не може бути заблоковано, тому що автозбереження відключено.",
+  "appCannotLockAutoInit": "Програму не можна заблокувати, тому що автозбереження вимкнено.",
   "appCannotLock": "У вас є незбережені зміни, які будуть втрачені. Продовжити?",
   "appAutoSave": "Зберігати зміни автоматично",
   "appSaveError": "Помилка збереження",
   "appSaveErrorBody": "Помилка авто-збереження файлу",
   "appSaveErrorBodyMul": "Помилка авто-збереження файлів:",
   "appSettingsError": "Помилка завантаження програми",
-  "appSettingsErrorBody": "Була помилка при завантаженні налаштувань програми. Будь ласка, перевірте URL програми або зверніться до адміністратора.",
-  "appNotSupportedError": "Ваш браузер не підтримується.",
+  "appSettingsErrorBody": "Сталася помилка при завантаженні налаштувань програми. Ретельно перевірте URL-адресу програми, або зверніться до адміністратора.",
+  "appNotSupportedError": "Ваш браузер не підтримує деякі важливі функції, які ми використовуємо.",
   "appTabWarn": "Забагато вкладок ",
   "appTabWarnBody": "KeeWeb не може бути використаний в двох вкладках браузера одночасно, будь ласка, закрийте цю вкладку.",
   "appRightsAlert": "Блокування KeeWeb програми",
@@ -353,7 +363,7 @@
   "setGenNewVersion": "Нова версія програми була випущена і завантажена",
   "setGenReleaseNotes": "Примітки до випуску",
   "setGenReloadToUpdate": "Перезавантажити для оновлення",
-  "setGenUpdateManual": "Доступна нова версія. Вона зможе перевіряти наявність і встановлювати оновлення автоматично, але авто-оновлення з поточної версії неможливо.",
+  "setGenUpdateManual": "Випущено нову версію. Вона зможе перевіряти наявність і встановлювати оновлення автоматично, але авто-оновлення з поточної версії неможливе.",
   "setGenDownloadUpdate": "Завантажити оновлення",
   "setGenUpdateAuto": "Завантажувати та встановлювати автоматично",
   "setGenUpdateCheck": "Перевіряти але не встановлювати",
@@ -394,7 +404,9 @@
   "setGenTitlebarStyleHiddenInset": "Нестандартний заголовок, перетягувати вікно",
   "setGenShowSubgroups": "Показати записи з усіх підгруп",
   "setGenTableView": "Перегляд списку записів у вигляді таблиці",
-  "setGenColorfulIcons": "Кольоровий список не стандартних іконок",
+  "setGenColorfulIcons": "Власні кольорові піктограми в списку",
+  "setGenUseMarkdown": "Markdown у нотатках",
+  "setGenUseGroupIconForEntries": "Використовувати піктограму групи для нових записів",
   "setGenDirectAutotype": "Якщо знайдено тільки один запис, вибрати його для автоматичного введення",
   "setGenFunction": "Функції",
   "setGenAutoSyncOnClose": "Автоматично зберігати та синхронізувати при закритті",
@@ -405,7 +417,7 @@
   "setGenNoRememberKeyFiles": "Не запам'ятовувати ",
   "setGenRememberKeyFilesData": "Зберігати у внутрішній пам'яті програми",
   "setGenRememberKeyFilesPath": "Пам'ятати тільки шлях до файлу ключа ",
-  "setGenLockInactive": "Авто блокування, якщо програма неактивна",
+  "setGenLockInactive": "Якщо програма неактивна",
   "setGenNoAutoLock": "Не блокувати",
   "setGenLockMinutes": "через {} хвилин",
   "setGenLockHour": "Через годину",
@@ -415,7 +427,7 @@
   "setGenNoClear": "Не  очищати",
   "setGenClearSeconds": "через {} секунд",
   "setGenClearMinute": "в хвилину",
-  "setGenMinInstead": "Мінімізувати програму замість закриття",
+  "setGenMinInstead": "Згортати програму замість закриття",
   "setGenLock": "Автоматичне блокування",
   "setGenLockMinimize": "При мінімізації",
   "setGenLockCopy": "Після копіювання пароля",
@@ -435,7 +447,7 @@
   "setFileLocalHint": "Хочете працювати легко з локальними файлами?",
   "setFileDownloadApp": "Завантажити desktop версію",
   "setFileSave": "Зберегти",
-  "setFileSaveTo": "Зберегти як ...",
+  "setFileSaveTo": "Зберегти до ...",
   "setFileClose": "Закрити",
   "setFileSync": "Синхр-я",
   "setFileSyncVerb": "Синхронізація",
@@ -448,13 +460,17 @@
   "setFilePass": "Майстер пароль",
   "setFileConfirmPass": "Підтвердити майстер пароль",
   "setFilePassChange": "для зміни паролю, будь ласка, введіть його в поле підтвердження",
-  "setFilePassChanged": "пароль був змінений; залиште поле порожнім, щоб використовувати старий пароль",
+  "setFilePassChanged": "ваш пароль було змінено; залиште поле порожнім, щоб використовувати старий пароль",
   "setFilePassNotMatch": "паролі не збігаються, будь ласка, введіть заново",
   "setFileKeyFile": "Файл ключа",
   "setFileSelKeyFile": "Оберіть файл ключа",
   "setFileNames": "Назва",
   "setFileDefUser": "Ім'я користувача за замовчуванням:",
   "setFileEnableTrash": "Включити кошик",
+  "setFileHistMode": "Історія запису",
+  "setFileHistLimited": "Автоматично видаляти старі записи історії",
+  "setFileHistDisabled": "Не зберігати історію",
+  "setFileHistUnlimited": "Зберігати записи історії завжди",
   "setFileHistLen": "Довжина історії, зберігати останню кількість записів ",
   "setFileHistSize": "Розмір історії, всього МБ для кожного файлу",
   "setFileBackups": "Копії",
@@ -479,12 +495,12 @@
   "setFileKdfParamsPar": "Паралелізм ",
   "setFileKeyChangeForce": "Вимагати оновлення ключа через (днів)",
   "setFileUseKeyFile": "Використовувати файл ключ",
-  "setFileUseGenKeyFile": "Використовувати згенерований файл ключ",
-  "setFileUseOldKeyFile": "Використовувати колишній файл ключ",
-  "setFileGenKeyFile": "Згенерувати новий файл ключ",
-  "setFileDontUseKeyFile": "Не використовувати файл ключ",
+  "setFileUseGenKeyFile": "Використовувати згенерований ключовий файл",
+  "setFileUseOldKeyFile": "Використовувати старий ключовий файл",
+  "setFileGenKeyFile": "Згенерувати новий ключовий файл",
+  "setFileDontUseKeyFile": "Не використовувати ключовий файл",
   "setFileEmptyPass": "Порожній пароль",
-  "setFileEmptyPassBody": "Збереження бази даних з порожнім паролем робить її абсолютно незахищеною. Ви дійсно хочете зробити це?",
+  "setFileEmptyPassBody": "Збереження бази даних з порожнім паролем робить її цілком незахищеною. Ви дійсно хочете зробити це?",
   "setFileSaveError": "Помилка збереження",
   "setFileSaveErrorBody": "Помилка збереження файлу",
   "setFileAlreadyExists": "Вже існує",
@@ -497,7 +513,7 @@
   "setShTitle": "Гарячі клавіші",
   "setShShowAll": "показати усі елементи",
   "setShColors": "показати елементи цього кольору",
-  "setShTrash": "перейти в кошик",
+  "setShTrash": "перейти до смітника",
   "setShFind": "пошук, просто почніть вводити",
   "setShClearSearch": "очистити пошук",
   "setShCopyPass": "скопіювати пароль або вибране поле",
@@ -511,13 +527,16 @@
   "setShSave": "зберегти всі файли",
   "setShGen": "згенерувати пароль",
   "setShSet": "параметри програми",
-  "setShCopyPassGlobal": "копія пароля (якщо програма працює у фоновому режимі)",
-  "setShAutoTypeGlobal": "автовведення (коли програма згорнута)",
+  "setShCopyPassGlobal": "копіювати пароль",
+  "setShCopyOtp": "скопіювати одноразовий пароль",
+  "setShAutoTypeGlobal": "автовведення",
+  "setShCopyPassOnly": "скопіювати пароль",
   "setShRestoreApp": "відкрити {}",
+  "setShGlobal": "Ці загальносистемні комбінації клавіш працюють, коли програма працює у фоновому режимі. Ви можете натиснути на них, щоб виконати необхідну дію.",
   "setShLock": "блокувати базу даних",
   "setShEdit": "Натисніть нову комбінацію клавіш, щоб встановити їх як гарячу",
   "setPlInstallTitle": "Встановити нові плагіни",
-  "setPlInstallDesc": "Плагіни для KeeWeb додають нові функції, теми і мови. Плагіни працюють з тими ж привілеями, що і KeeWeb, вони можуть отримувати і управляти всіма вашими паролями. Ніколи не встановлюйте плагіни, яким ви не довіряєте.",
+  "setPlInstallDesc": "Плагіни для KeeWeb додають нові функції, теми і мови. Плагіни працюють з такими самими привілеями, що й KeeWeb, вони можуть отримувати доступ і керування всіма вашими паролями. Ніколи не встановлюйте плагіни, яким ви не довіряєте.",
   "setPlInstallLabel": "URL адреса плагіну",
   "setPlInstallBtn": "Встановити",
   "setPlInstallBtnProgress": "Встановлення",
@@ -554,7 +573,7 @@
   "setAboutSecond": "під ліцензією {}.",
   "setAboutSource": "Вихідний код і питання на {}.",
   "setHelpFormat": "Формат файлу",
-  "setHelpFormatBody": "Ця програма - перенесення програми {} на веб-технології. Програма сумісна з файлами формату KeePass (kdbx). Ви можете створювати такі файли (бази даних паролів) в KeePass або в цій програмі. Формат файлу на 100% сумісний з обома програмами.",
+  "setHelpFormatBody": "Ця програма - перенесення програми {}, створеної на основі веб-технологій. Вона сумісна з файлами формату KeePass (kdbx). Ви можете створювати такі файли (бази даних паролів) в KeePass або в цій програмі. Формат файлу на 100% сумісний з обома програмами.",
   "setHelpProblems": "Потрібна допомога?",
   "setHelpProblems1": "Якщо щось піде не так, будь ласка {}",
   "setHelpProblems2": "або {}",
@@ -566,7 +585,7 @@
   "setHelpWebApp": "Web-додаток",
   "setHelpUpdates": "Оновлення",
   "setHelpTwitter": "Twitter ",
-  "dropboxSetupDesc": "Для використання Dropbox в окремому додатку потрібне додаткове налаштування. Будь ласка, створіть свій Dropbox додаток та введіть його ключ нижче.",
+  "dropboxSetupDesc": "Для використання Dropbox в окремій програмі необхідне додаткове налаштування. Створіть власну програму Dropbox та введіть внизу її ключ.",
   "dropboxAppKey": "Dropbox ключ додатку",
   "dropboxAppKeyDesc": "Скопіюйте ключ з вашої програми Dropbox (налаштування для розробників)",
   "dropboxFolder": "Папка програми",
@@ -584,7 +603,7 @@
   "launcherSave": "Збереження пароля бази даних",
   "launcherFileFilter": "KeePass файли",
   "authPopupRequired": "Спливаючі вікна заблоковані",
-  "authPopupRequiredBody": "Будь ласка, дозвольте спливаючі вікна цьому додатку в вашому браузері.",
+  "authPopupRequiredBody": "Дозвольте виринаючі вікна у вашому браузері, або спробуйте ще раз.",
   "exportFileInfo": "Інформація про файл",
   "exportHtmlName": "Ім'я",
   "exportHtmlDate": "Дата експорту",
