--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "认证已经完成，您可以关闭这个选项卡。",
   "months": [
     "一月",
     "二月",
@@ -45,7 +46,7 @@
     "周五",
     "周六"
   ],
-  "retToApp": "返回程序",
+  "retToApp": "返回应用",
   "name": "名称",
   "icon": "图标",
   "title": "标题 ",
@@ -68,6 +69,9 @@
   "help": "帮助",
   "settings": "设置",
   "plugins": "插件",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
   "cache": "缓存",
   "file": "密码数据库",
   "webdav": "WebDAV",
@@ -103,14 +107,14 @@
   "genLen": "长度",
   "genNewPass": "新设密码",
   "genPresetDefault": "默认预设",
-  "genPresetDerived": "like old password",
-  "genPresetPronounceable": "pronounceable",
-  "genPresetMed": "medium length",
-  "genPresetLong": "long",
-  "genPresetPin4": "4-digit PIN",
-  "genPresetMac": "MAC address",
-  "genPresetHash128": "128-bit hash",
-  "genPresetHash256": "256-bit hash",
+  "genPresetDerived": "类似旧密码",
+  "genPresetPronounceable": "可读密码",
+  "genPresetMed": "中等长度",
+  "genPresetLong": "长密码",
+  "genPresetPin4": "4位数字 PIN",
+  "genPresetMac": "MAC 地址",
+  "genPresetHash128": "128位哈希",
+  "genPresetHash256": "256位哈希",
   "genHidePass": "隐藏密码",
   "genShowPass": "显示密码",
   "grpTitle": "分组",
@@ -144,6 +148,10 @@
   "genPsAmbiguous": "相似字符",
   "genPsInclude": "要包含的其它符号",
   "genPsExample": "生成密码示例",
+  "genPsPattern": "模式",
+  "genPsPatternHelp": "模式可以指定选择字符的自定义规则。例如，1-AA 将会生成开头是一个数字，然后跟着一个横线和两个字母的密码。您可以使用这些符号：",
+  "genPsAllRanges": "所有符号",
+  "genPsIncluded": "上边添加的额外符号",
   "keyChangeTitleRemote": "主密钥已更改",
   "keyChangeMessageRemote": "此数据库的主密钥已更改。请输入新密钥",
   "keyChangeTitleExpired": "主密钥已过期",
@@ -170,7 +178,7 @@
   "searchZA": "从 Z {} A",
   "searchON": "从旧 {} 新",
   "searchNO": "从新 {} 旧",
-  "searchShiftClickOr": "Shift+单击 或",
+  "searchShiftClickOr": "shift+单击 或",
   "searchAdvTitle": "开/关 高级搜索",
   "searchSearchIn": "搜索范围",
   "searchOther": "其他字段",
@@ -185,6 +193,7 @@
   "openNewFile": "新建",
   "openMore": "更多",
   "openDemo": "演示",
+  "openGenerate": "生成",
   "openXml": "导入 XML",
   "openCaps": "大写锁定 开",
   "openClickToOpen": "点击打开文件",
@@ -201,7 +210,7 @@
   "openRemoveLastQuestionBody": "您要删除的文件仅保存在KeeWeb内部, 确认永久删除吗?",
   "openRemoveLastQuestionModBody": "您要删除的文件已在本地修改, 确认放弃修改并删除吗?",
   "openLocalFile": "本地文件",
-  "openLocalFileBody": "您要打开的密码数据库将仅保存在KeeWeb中, 您所做的变更将不会被保存到密码数据库中. 如果想要保存您的数据, 请从设置面板中导出.",
+  "openLocalFileBody": "您要打开的文件将存储在当前应用中，您所做的变更不会写回到文件系统中。如果想取回您的数据，请从设置中导出。",
   "openLocalFileDontShow": "不再显示",
   "openWrongFile": "文件损坏",
   "openWrongFileBody": "不支持此文件格式。KeeWeb 仅支持 KeePass kdbx 格式的数据库文件。",
@@ -245,7 +254,7 @@
   "detHistoryRevertAlertBody": "您当前的状态将保存到历史记录中。",
   "detHistoryDeleteAlert": "删除这条历史纪录？",
   "detHistoryDeleteAlertBody": "您无法恢复该记录。",
-  "detHistoryDiscardChangesAlert": "放弃变更并进入？",
+  "detHistoryDiscardChangesAlert": "放弃记录的变更？",
   "detHistoryDiscardChangesAlertBody": "未保存的变更将丢失，并无法找回。",
   "detBackToList": "返回列表",
   "detSetIconColor": "更改颜色",
@@ -317,7 +326,7 @@
   "autoTypeLink": "更多...",
   "autoTypeError": "自动输入出错",
   "autoTypeErrorGeneric": "自动输入时发生一个错误：{}",
-  "autoTypeErrorGlobal": "要使用系统范围的快捷方式，请将应用程序的焦点放在需要输入密码的位置",
+  "autoTypeErrorGlobal": "要使用系统快捷键，请将应用程序的焦点放在需要输入密码的位置",
   "autoTypeErrorNotInstalled": "未安装 {}",
   "autoTypeHeader": "自动输入：选择",
   "autoTypeMsgNoWindow": "我们无法获取当前窗口的标题，请手动输入以搜索",
@@ -329,21 +338,21 @@
   "autoTypeSelectionHintShift": "其它字段",
   "autoTypeSelectionOtp": "一次性密码",
   "appSecWarn": "不安全！",
-  "appSecWarnBody1": "您已经通过不安全的连接加载当前应用，您有被监控和密码失窃的风险。我们强烈建议您停止使用，除非您清楚地了解自己在做什么。",
+  "appSecWarnBody1": "您已经通过不安全的连接加载当前应用。其他人可能监控并盗窃您的密码。我们强烈建议您停止使用，除非您清楚地了解自己在做什么。",
   "appSecWarnBody2": "是的，你的数据库是加密的，但无法保证保证您所获取的应用未被修改。",
   "appSecWarnBtn": "我已经了解风险，请继续",
   "appUnsavedWarn": "更改未保存！",
   "appUnsavedWarnBody": "您有未保存的文件，如果关闭应用，这些更改将丢失。",
   "appDontExitBtn": "不要退出",
-  "appCannotLockAutoInit": "应用无法被锁定，因为自动保存被关闭。",
+  "appCannotLockAutoInit": "应用无法被锁定，因为自动保存被禁用。",
   "appCannotLock": "所以未保存更改将丢失，是否继续？",
   "appAutoSave": "自动保存更改",
   "appSaveError": "保存出错",
   "appSaveErrorBody": "自动保存文件失败",
   "appSaveErrorBodyMul": "自动保存失败：",
   "appSettingsError": "载入应用时发生错误",
-  "appSettingsErrorBody": "载入应用设置时发生错误。请再次检查应用网址或联系您的管理员。",
-  "appNotSupportedError": "您的浏览器不受支持。",
+  "appSettingsErrorBody": "加载应用设置时出错。请再次检查应用网址或联系您的管理员。",
+  "appNotSupportedError": "您的浏览器不支持我们使用的一些重要特性。",
   "appTabWarn": "标签页过多",
   "appTabWarnBody": "KeeWeb 不能同时在两个浏览器标签页中使用。请关闭这个标签页。",
   "appRightsAlert": "锁定 KeeWeb 应用",
@@ -396,6 +405,8 @@
   "setGenShowSubgroups": "显示所有子分组的记录",
   "setGenTableView": "以表格视图显示记录",
   "setGenColorfulIcons": "在列表中显示彩色图标",
+  "setGenUseMarkdown": "在备注中显示 Markdown",
+  "setGenUseGroupIconForEntries": "新记录自动使用分组图标",
   "setGenDirectAutotype": "如果仅找到一个匹配的条目，将自动填充",
   "setGenFunction": "功能",
   "setGenAutoSyncOnClose": "在关闭程序时自动保存和同步",
@@ -418,9 +429,9 @@
   "setGenClearMinute": "在一分钟后",
   "setGenMinInstead": "最小化此应用但不关闭",
   "setGenLock": "自动锁定",
-  "setGenLockMinimize": "最小化时自动锁定",
-  "setGenLockCopy": "复制密码时自动锁定",
-  "setGenLockAutoType": "自动输入时自动锁定",
+  "setGenLockMinimize": "应用最小化时",
+  "setGenLockCopy": "复制密码时",
+  "setGenLockAutoType": "自动输入时",
   "setGenLockOrSleep": "当计算机被锁定或进入睡眠状态",
   "setGenStorage": "存储",
   "setGenShowAdvanced": "显示高级设置",
@@ -456,6 +467,10 @@
   "setFileNames": "密码数据库名称",
   "setFileDefUser": "默认用户名",
   "setFileEnableTrash": "启用回收站",
+  "setFileHistMode": "记录历史",
+  "setFileHistLimited": "自动删除旧的历史记录",
+  "setFileHistDisabled": "不保存历史",
+  "setFileHistUnlimited": "永久保存历史记录",
   "setFileHistLen": "每项记录保留历史记录的长度限制",
   "setFileHistSize": "每个密码数据库历史记录的大小限制",
   "setFileBackups": "备份",
@@ -517,7 +532,9 @@
   "setShAutoTypeGlobal": "自动输入",
   "setShCopyPassOnly": "复制密码",
   "setShRestoreApp": "打开 {}",
+  "setShGlobal": "当应用在后台运行时，这些系统快捷键会生效。 您可以单击它们选择您自己的快捷键。",
   "setShLock": "锁定数据库",
+  "setShEdit": "按下新的组合键将其设置为快捷键",
   "setPlInstallTitle": "安装新插件",
   "setPlInstallDesc": "KeeWeb 插件能够添加功能、主题与语言至 KeeWeb 。插件以与 KeeWeb 同样的等级运行，它们能够读取和管理您的全部密码。永远不要安装不信任的插件。",
   "setPlInstallLabel": "插件 URL",
@@ -556,7 +573,7 @@
   "setAboutSecond": "遵守 {} 许可协议。",
   "setAboutSource": "源码及缺陷报告托管于 {} 。",
   "setHelpFormat": "文件格式",
-  "setHelpFormatBody": "这是一个基于网络技术构建的 {} 程序的移植版本，使用 KeePass 的 kdbx 格式。您可以使用 KeePass 或者 KeeWeb 创建和使用此类密码数据库。文件格式对两者100%兼容。",
+  "setHelpFormatBody": "这是一个基于 Web 技术构建的 {} 程序的移植版本，支持 KeePass 文件格式 (kdbx)。您可以使用 KeePass 或当前应用创建这种文件 (密码数据库)。文件格式对两者100%兼容。",
   "setHelpProblems": "需要一些帮助？",
   "setHelpProblems1": "如果出现问题，请 {}",
   "setHelpProblems2": "或者 {}",
@@ -586,7 +603,7 @@
   "launcherSave": "保存密码数据库",
   "launcherFileFilter": "KeePass 文件",
   "authPopupRequired": "弹出窗口已被阻止",
-  "authPopupRequiredBody": "请在您的浏览器中允许此应用弹出窗口。",
+  "authPopupRequiredBody": "请在您的浏览器中允许弹出窗口或重试。",
   "exportFileInfo": "文件信息",
   "exportHtmlName": "名称",
   "exportHtmlDate": "导出数据",
