--- a/docs/translations/zh-TW/zh-TW.json
+++ b/docs/translations/zh-TW/zh-TW.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "認證已經完成，您可以關閉這個標籤頁。",
   "months": [
     "一月",
     "二月",
@@ -91,7 +92,7 @@
   "alertNo": "取消",
   "alertOk": "確定",
   "alertCancel": "取消",
-  "alertSignIn": "登錄",
+  "alertSignIn": "登入",
   "alertCopy": "複製",
   "alertClose": "關閉",
   "alertDoNotAsk": "不再詢問",
@@ -109,8 +110,8 @@
   "genPresetLong": "長",
   "genPresetPin4": "4位 PIN",
   "genPresetMac": "MAC 地址",
-  "genPresetHash128": "128位散列",
-  "genPresetHash256": "256位散列",
+  "genPresetHash128": "128位元散列",
+  "genPresetHash256": "256位元散列",
   "genHidePass": "隱藏密碼",
   "genShowPass": "顯示密碼",
   "grpTitle": "分組",
@@ -144,11 +145,14 @@
   "genPsAmbiguous": "相似字符",
   "genPsInclude": "要包含的其他符號",
   "genPsExample": "生成密碼範例",
+  "genPsPatternHelp": "Patterns 可做為生成密碼字元時的一組特定規則。例如，'1-AA' 可產生的密碼組成是符合起始1個數字、接續是一個'-'符號，最後是兩個ASCII字元。你可使用這些字符：",
+  "genPsAllRanges": "任意字符",
   "keyChangeTitleRemote": "主密鑰已更改",
   "keyChangeMessageRemote": "此數據庫的主密鑰已更改,請輸入新密鑰.",
   "keyChangeTitleExpired": "主密鑰已過期",
   "keyChangeMessageExpired": "該密碼數據庫密鑰已過期,請輸入新密鑰.",
   "keyChangeRepeatPassword": "再輸入一遍密碼",
+  "keyEnter": "輸入",
   "iconFavTitle": "下載並使用站點圖標",
   "iconSelCustom": "選擇自定義圖標",
   "listEmptyTitle": "空",
@@ -159,8 +163,8 @@
   "listNoAttachments": "沒有附件",
   "listAddTemplateHeader": "範本",
   "listAddTemplateBody1": "範本容許你一按新增紀錄。在範本紀錄輸入資料，然後按 {} 就可再使用這個範本。",
-  "listAddTemplateBody2": "你可以隨時在{}資料夾內找到你的範本。",
-  "searchAddNew": "新建",
+  "listAddTemplateBody2": "你可以隨時在{}分組內找到你的範本。",
+  "searchAddNew": "新增",
   "searchSort": "排序",
   "searchCreated": "創建時間",
   "searchUpdated": "更新日期",
@@ -177,6 +181,7 @@
   "searchOptions": "選項",
   "searchCase": "區分大小寫",
   "searchRegex": "正規表達式",
+  "searchExact": "精確",
   "openOpen": "打開",
   "openNew": "新建",
   "openNewFile": "新項目",
@@ -220,6 +225,7 @@
   "openErrorFileNotFound": "未找到文件",
   "openListErrorBody": "開啟檔案資料時發生錯誤",
   "openShowAllFiles": "顯示所有檔案",
+  "openFileNoCacheError": "File 不在快取儲存中。這可能會因瀏覽器的儲存被清除而發生。打開file，從KeeWeb移除它，然後再加入一次。",
   "detAttDownload": "按住Shift+點擊附件按鈕下載 或",
   "detAttDelToRemove": "刪除並移除",
   "detAttSave": "另存為...",
@@ -239,6 +245,11 @@
   "detHistoryCurState": "當前狀態",
   "detHistoryCurUnsavedState": "當前未保存狀態",
   "detHistoryRevertAlert": "還原到這個狀態?",
+  "detHistoryRevertAlertBody": "你的當前狀態將被保存到歷史紀錄",
+  "detHistoryDeleteAlert": "刪除此歷史紀錄狀態?",
+  "detHistoryDeleteAlertBody": "你將無法還原它.",
+  "detHistoryDiscardChangesAlert": "放棄對記錄的更改?",
+  "detHistoryDiscardChangesAlertBody": "未保存的更改將會遺失，且將無法返回.",
   "detBackToList": "返回列表",
   "detSetIconColor": "更改顏色",
   "detSetIcon": "更改圖標",
@@ -255,6 +266,8 @@
   "detDelFromTrash": "從回收站中刪除嗎?",
   "detDelFromTrashBody": "刪除後將無法恢復.",
   "detDelFromTrashBodyHint": "想要快速刪除回收站內所有內容,請點擊回收站菜單的清空圖標.",
+  "detDelToTrash": "刪除此紀錄?",
+  "detDelToTrashBody": "這紀錄將被移到回收資料夾中.",
   "detFieldCopied": "已複製",
   "detFieldCopiedTime": "複製 {} 秒",
   "detCopyHint": "您可以通過點擊字段標題來複製字段值",
@@ -268,6 +281,7 @@
   "detMenuCopyUser": "複製用戶名",
   "detSetupOtp": "即棄密碼",
   "detClone": "製作副本",
+  "detCopyEntryToClipboard": "複製所有欄位",
   "detClonedName": "複製",
   "detAutoType": "自動輸入",
   "detAutoTypeSettings": "自動輸入設定",
@@ -307,6 +321,7 @@
   "autoTypeMsgNoWindow": "我們無法獲取使用中視窗的標題，請自行搜尋紀錄",
   "autoTypeMsgMatchedByWindow": "選擇用於 {} 的密碼",
   "autoTypeNoMatches": "無吻合紀錄",
+  "autoTypeSelectionOtp": "一次性密碼",
   "appSecWarn": "不安全！",
   "appSecWarnBody1": "你正使用不安全的連線載入本程式。可能有人正在監察你的活動和偷取你的密碼。我們強烈建議你停止載入，除非你明確知道你在做什麼。",
   "appSecWarnBody2": "你的密碼庫的確已經加密，但無人可以保證你正使用的程式版本未經改裝。",
@@ -477,8 +492,12 @@
   "setShGen": "生成密碼",
   "setShSet": "程式設定",
   "setShCopyPassGlobal": "複製密碼（程式在背景時）",
-  "setShAutoTypeGlobal": "自動輸入（程式在背景時）",
+  "setShCopyOtp": "複製 OTP",
+  "setShAutoTypeGlobal": "自動輸入",
+  "setShCopyPassOnly": "複製密碼",
+  "setShGlobal": "這些系統級別快捷鍵可作用在當KeeWeb程式於背景中執行時。你可點擊他們去設定自己想要的快捷鍵組合。",
   "setShLock": "鎖定密碼庫",
+  "setShEdit": "按下一新的按鍵組合來設成快捷鍵",
   "setPlInstallTitle": "安裝新擴充套件",
   "setPlInstallDesc": "KeeWeb 擴充套件為 KeeWeb 新增功能，主題和語言包。擴充套件與 KeeWeb 有同等存取權，它們可以讀取和管理你所有密碼。千萬不要安裝你不信任的套件。",
   "setPlInstallLabel": "擴充套件 URL",
@@ -546,5 +565,14 @@
   "launcherSave": "儲存密碼庫",
   "launcherFileFilter": "KeePass 檔案",
   "authPopupRequired": "彈窗被阻擋",
-  "authPopupRequiredBody": "請容許本程式在你的瀏覽器彈出視窗"
+  "authPopupRequiredBody": "請容許本程式在你的瀏覽器彈出視窗",
+  "exportFileInfo": "檔案資訊",
+  "exportHtmlName": "名稱",
+  "exportHtmlDate": "輸出日期",
+  "exportGenerator": "軟體",
+  "importCsvTitle": "從CSV匯入",
+  "importCsvRun": "匯入",
+  "importIgnoreField": "忽略",
+  "importTo": "紀錄將被匯入到",
+  "importNewFile": "新檔案名稱"
 }
