--- a/docs/translations/meta.json
+++ b/docs/translations/meta.json
@@ -2,133 +2,133 @@
   "zh-TW": {
     "name": "繁體中文",
     "nameEn": "Chinese Traditional",
-    "count": 506,
-    "version": "1.6.0"
+    "count": 534,
+    "version": "1.7.0"
   },
   "zh-CN": {
     "name": "简体中文",
     "nameEn": "Chinese Simplified",
-    "count": 556,
-    "version": "1.12.0"
+    "count": 573,
+    "version": "1.13.0"
   },
   "ja": {
     "name": "日本語",
     "nameEn": "Japanese",
     "count": 559,
-    "version": "1.5.0"
+    "version": "1.5.1"
   },
   "pt-PT": {
     "name": "Português",
     "nameEn": "Portuguese",
     "count": 434,
-    "version": "1.6.0"
+    "version": "1.6.1"
   },
   "ko": {
     "name": "한국어",
     "nameEn": "Korean",
     "count": 490,
-    "version": "1.9.0"
+    "version": "1.9.1"
   },
   "cs": {
     "name": "Čeština",
     "nameEn": "Czech",
     "count": 498,
-    "version": "1.7.0"
+    "version": "1.7.1"
   },
   "tr": {
     "name": "Türkçe",
     "nameEn": "Turkish",
-    "count": 560,
-    "version": "1.10.0"
+    "count": 573,
+    "version": "1.11.0"
   },
   "pl": {
     "name": "Polski",
     "nameEn": "Polish",
-    "count": 560,
-    "version": "1.12.0"
-  },
-  "fi": {
-    "name": "Suomi",
-    "nameEn": "Finnish",
-    "count": 422,
-    "version": "1.3.0"
+    "count": 573,
+    "version": "1.13.0"
   },
   "hu": {
     "name": "Magyar",
     "nameEn": "Hungarian",
-    "count": 558,
-    "version": "1.15.0"
+    "count": 572,
+    "version": "1.16.0"
+  },
+  "ca": {
+    "name": "Català",
+    "nameEn": "Catalan",
+    "count": 430,
+    "version": "1.0.0"
   },
   "da": {
     "name": "Dansk",
     "nameEn": "Danish",
     "count": 521,
-    "version": "1.2.0"
+    "version": "1.2.1"
   },
   "sk": {
     "name": "Slovenčina",
     "nameEn": "Slovak",
-    "count": 560,
-    "version": "1.0.0"
+    "count": 573,
+    "version": "1.1.0"
   },
   "uk": {
     "name": "Українська",
     "nameEn": "Ukrainian",
-    "count": 554,
-    "version": "1.10.0"
+    "count": 573,
+    "version": "1.11.0"
   },
   "pt-BR": {
     "name": "Português (Brasil)",
     "nameEn": "Portuguese (Brazil)",
-    "count": 552,
-    "version": "1.7.0"
+    "count": 557,
+    "version": "1.8.0"
   },
   "no": {
     "name": "Norsk",
     "nameEn": "Norwegian",
     "count": 538,
-    "version": "1.9.0"
+    "version": "1.9.1"
   },
   "nl-NL": {
     "name": "Nederlands",
     "nameEn": "Dutch",
-    "count": 560,
-    "version": "1.17.0"
+    "count": 573,
+    "version": "1.18.0"
   },
   "fr-FR": {
     "name": "Français",
     "nameEn": "French",
-    "count": 558,
-    "version": "1.16.0"
+    "count": 573,
+    "version": "1.17.0"
   },
   "de-DE": {
     "name": "Deutsch",
     "nameEn": "German",
-    "count": 558,
-    "version": "1.15.0"
+    "count": 573,
+    "version": "1.16.0"
   },
   "it-IT": {
     "name": "Italiano",
     "nameEn": "Italian",
-    "count": 498,
-    "version": "1.7.0"
+    "count": 549,
+    "version": "1.8.0"
   },
   "ru-RU": {
     "name": "Русский",
     "nameEn": "Russian",
-    "count": 560,
-    "version": "1.18.0"
+    "count": 573,
+    "version": "1.19.0"
   },
   "es-ES": {
     "name": "Español",
     "nameEn": "Spanish",
-    "count": 558,
-    "version": "1.15.0"
+    "count": 573,
+    "version": "1.16.0"
   },
   "sv-SE": {
     "name": "Svenska",
     "nameEn": "Swedish",
     "count": 458,
-    "version": "1.7.0"
+    "version": "1.7.1"
   }
 }
