--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -1,4 +1,5 @@
 {
+  "appBrowserAuthComplete": "Uwierzytelnianie zostało zakończone, możesz teraz zamknąć tę kartę.",
   "months": [
     "styczeń",
     "luty",
@@ -68,6 +69,9 @@
   "help": "Pomoc",
   "settings": "Ustawienia",
   "plugins": "Wtyczki",
+  "ctrlKey": "ctrl",
+  "shiftKey": "shift",
+  "altKey": "alt",
   "cache": "Cache",
   "file": "Plik",
   "webdav": "WebDAV",
@@ -144,6 +148,10 @@
   "genPsAmbiguous": "Symbole wieloznaczne",
   "genPsInclude": "Dodatkowe symbole do włączenia",
   "genPsExample": "Przykład wygenerowanego hasła",
+  "genPsPattern": "Wzór",
+  "genPsPatternHelp": "Wzorów można używać do określania niestandardowych reguł wyboru znaków. Na przykład 1-AA wygeneruje hasła zaczynające się od cyfry, po której następuje myślnik i dwie litery. Możesz użyć tych symboli:",
+  "genPsAllRanges": "Wszystkie symbole",
+  "genPsIncluded": "Dodatkowe symbole dodane powyżej",
   "keyChangeTitleRemote": "Zmieniono klucz główny",
   "keyChangeMessageRemote": "Klucz główny tej bazy danych został zmieniony. Proszę wprowadzić nowy klucz",
   "keyChangeTitleExpired": "Wygasł klucz główny",
@@ -398,6 +406,7 @@
   "setGenTableView": "Widok tabeli listy wpisów",
   "setGenColorfulIcons": "Kolorowe niestandardowe ikony na liście",
   "setGenUseMarkdown": "Markdown w notatkach",
+  "setGenUseGroupIconForEntries": "Automatycznie używaj ikony grupy do nowych wpisów",
   "setGenDirectAutotype": "Jeśli znaleziono tylko jeden pasujący wpis, wybierz go automatycznie dla auto-type",
   "setGenFunction": "Działanie",
   "setGenAutoSyncOnClose": "Automatycznie zapisuj i synchronizuj przy zamknięciu",
@@ -458,6 +467,10 @@
   "setFileNames": "Nazwy",
   "setFileDefUser": "Domyślny użytkownik",
   "setFileEnableTrash": "Włącz kosz",
+  "setFileHistMode": "Historia wpisu",
+  "setFileHistLimited": "Automatycznie usuwaj stare zapisy historii",
+  "setFileHistDisabled": "Nie zapisuj historii",
+  "setFileHistUnlimited": "Przechowuj na zawsze zapisy historii",
   "setFileHistLen": "Długość historii, zachowaj ostatnie zapisy na wpis",
   "setFileHistSize": "Rozmiar historii, ogół MB na plik",
   "setFileBackups": "Kopie",
